--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -58,6 +58,10 @@ library
     deepseq  >=1.3.0.2 && <1.5,
     hashable >=1.2.6.1 && <1.3
 
+  if !impl(ghc >= 8.0)
+    build-depends:
+      semigroups >=0.18.3 && <0.18.4
+
   if !impl(ghc >= 7.10)
     build-depends:
        nats >=1     && <1.2,
