--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -71,6 +71,11 @@ library
   hs-source-dirs:      src
   default-language:    Haskell2010
 
+  -- dump-core
+  -- if impl(ghc >= 8.0)
+  --  build-depends: dump-core
+  --  ghc-options: -fplugin=DumpCore -fplugin-opt DumpCore:core-html
+
 test-suite inspection
   type:                exitcode-stdio-1.0
   main-is:             Inspection.hs
