--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -15,23 +15,35 @@ description:
   \    S :: Fin n -> Fin ('Nat.S n)
   @
   .
+  [vec](https://hackage.haskell.org/package/vec) implements length-indexed
+  (sized) lists using this package for indexes.
+  .
   The "Data.Fin.Enum" module let's work generically with enumerations.
   .
-  Differences to other packages:
+  See [Hasochism: the pleasure and pain of dependently typed haskell programming](https://doi.org/10.1145/2503778.2503786)
+  by Sam Lindley and Conor McBride for answers to /how/ and /why/.
+  Read [APLicative Programming with Naperian Functors](https://doi.org/10.1007/978-3-662-54434-1_21)
+  by Jeremy Gibbons for (not so) different ones.
   .
-  * [type-natural](http://hackage.haskell.org/package/type-natural) depends
-    on @singletons@ package. `fin` will try to stay light on the dependencies,
+  === Similar packages
+  .
+  * [finite-typelits](https://hackage.haskell.org/package/finite-typelits)
+  . Is a great package, but uses @GHC.TypeLits@.
+  .
+  * [type-natural](https://hackage.haskell.org/package/type-natural) depends
+    on @singletons@ package. @fin@ will try to stay light on the dependencies,
     and support as many GHC versions as practical.
   .
-  * [peano](http://hackage.haskell.org/package/peano) is very incomplete
+  * [peano](https://hackage.haskell.org/package/peano) is very incomplete
   .
-  * [nat](http://hackage.haskell.org/package/nat) as well.
+  * [nat](https://hackage.haskell.org/package/nat) as well.
   .
   * [PeanoWitnesses](https://hackage.haskell.org/package/PeanoWitnesses)
     doesn't use @DataKinds@.
   .
-  * [type-combinators](http://hackage.haskell.org/package/type-combinators)
+  * [type-combinators](https://hackage.haskell.org/package/type-combinators)
     is big package too.
+
 homepage:            https://github.com/phadej/vec
 bug-reports:         https://github.com/phadej/vec/issues
 license:             BSD3
