--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -122,6 +122,7 @@ benchmark bench
   default-language:    Haskell2010
   other-modules:
     DotProduct
+    Universe
   build-depends:
     base,
     fin,
