--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,5 +1,5 @@
 name:                fin
-version:             0
+version:             0.0.1
 synopsis:            Nat and Fin: peano naturals and finite numbers
 description:
   This package provides two simple types, and some tools to work with them.
@@ -59,7 +59,8 @@ tested-with:
   GHC==7.8.4,
   GHC==7.10.3,
   GHC==8.0.2,
-  GHC==8.2.1
+  GHC==8.2.2,
+  GHC==8.4.1
 
 source-repository head
   type:      git
@@ -72,7 +73,7 @@ library
     Data.Nat
     Data.Type.Nat
   build-depends:
-    base     >=4.7     && <4.11,
+    base     >=4.7     && <4.12,
     deepseq  >=1.3.0.2 && <1.5,
     hashable >=1.2.6.1 && <1.3
 
@@ -104,7 +105,7 @@ test-suite inspection
     base,
     fin,
     tagged,
-    inspection-testing >= 0.1.2 && <0.2
+    inspection-testing >= 0.1.2 && <0.3
 
   if !impl(ghc >= 8.0)
     buildable: False
