--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,5 +1,5 @@
 name:                vec
-version:             0
+version:             0.1
 synopsis:            Vec: length-indexed (sized) list
 description:
   This package provides length-indexed (sized) lists, also known as vectors.
@@ -69,7 +69,8 @@ tested-with:
   GHC==7.8.4,
   GHC==7.10.3,
   GHC==8.0.2,
-  GHC==8.2.1
+  GHC==8.2.2,
+  GHC==8.4.1
 
 source-repository head
   type:      git
@@ -81,17 +82,19 @@ library
     Data.Vec.Lazy.Inline
     Data.Vec.Pull
   build-depends:
-    adjunctions   >=4.3     && <4.4,
-    base          >=4.7     && <4.11,
+    adjunctions   >=4.3     && <4.5,
+    base          >=4.7     && <4.12,
     base-compat   >=0.9.3   && <0.10,
-    boring        >=0       && <0.1,
     deepseq       >=1.3.0.2 && <1.5,
     distributive  >=0.5.3   && <0.6,
     fin           >=0       && <0.1,
     hashable      >=1.2.6.1 && <1.3,
-    lens          >=4.15.4  && <4.16,
-    semigroupoids >=5.2.1   && <5.3,
-    semigroups    >=0.18.3  && <0.18.4
+    lens          >=4.16    && <4.17,
+    semigroupoids >=5.2.1   && <5.3
+
+  if !impl(ghc >= 8.0)
+    build-depends:
+      semigroups  >=0.18.4  && <0.18.5
 
   ghc-options:         -Wall -fprint-explicit-kinds
   hs-source-dirs:      src
@@ -113,7 +116,7 @@ test-suite inspection
     fin,
     vec,
     tagged,
-    inspection-testing >= 0.1.1.2 && <0.2
+    inspection-testing >= 0.2.0.1 && <0.3
 
   if !impl(ghc >= 8.0)
     buildable: False
@@ -140,4 +143,4 @@ benchmark bench
     fin,
     vec,
     vector,
-    criterion >= 1.2.3.0 && <1.3
+    criterion >= 1.4.0.0 && <1.5
