--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,5 +1,6 @@
 name:                vec
 version:             0.1
+x-revision:          1
 synopsis:            Vec: length-indexed (sized) list
 description:
   This package provides length-indexed (sized) lists, also known as vectors.
@@ -84,7 +85,7 @@ library
   build-depends:
     adjunctions   >=4.4     && <4.5,
     base          >=4.7     && <4.12,
-    base-compat   >=0.9.3   && <0.10,
+    base-compat   >=0.9.3   && <0.11,
     deepseq       >=1.3.0.2 && <1.5,
     distributive  >=0.5.3   && <0.6,
     fin           >=0.0.1   && <0.1,
