--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,6 +1,10 @@
+cabal-version:       >=1.10
 name:                fin
 version:             0.0.1
+x-revison:           1
+
 synopsis:            Nat and Fin: peano naturals and finite numbers
+category:            Data
 description:
   This package provides two simple types, and some tools to work with them.
   Also on type level as @DataKinds@.
@@ -51,16 +55,15 @@ license-file:        LICENSE
 author:              Oleg Grenrus <oleg.grenrus@iki.fi>
 maintainer:          Oleg.Grenrus <oleg.grenrus@iki.fi>
 copyright:           (c) 2017 Oleg Grenrus
-category:            Data
 build-type:          Simple
 extra-source-files:  ChangeLog.md
-cabal-version:       >=1.10
 tested-with:
   GHC==7.8.4,
   GHC==7.10.3,
   GHC==8.0.2,
   GHC==8.2.2,
-  GHC==8.4.1
+  GHC==8.4.3,
+  GHC==8.6.1
 
 source-repository head
   type:      git
@@ -73,7 +76,7 @@ library
     Data.Nat
     Data.Type.Nat
   build-depends:
-    base     >=4.7     && <4.12,
+    base     >=4.7     && <4.13,
     deepseq  >=1.3.0.2 && <1.5,
     hashable >=1.2.7.0 && <1.3
 
