--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,7 +1,10 @@
+cabal-version:       >=1.10
 name:                vec
 version:             0.1
-x-revision:          2
+x-revision:          3
+
 synopsis:            Vec: length-indexed (sized) list
+category:            Data
 description:
   This package provides length-indexed (sized) lists, also known as vectors.
   .
@@ -62,16 +65,15 @@ license-file:        LICENSE
 author:              Oleg Grenrus <oleg.grenrus@iki.fi>
 maintainer:          Oleg.Grenrus <oleg.grenrus@iki.fi>
 copyright:           (c) 2017 Oleg Grenrus
-category:            Data
 build-type:          Simple
 extra-source-files:  ChangeLog.md
-cabal-version:       >=1.10
 tested-with:
   GHC==7.8.4,
   GHC==7.10.3,
   GHC==8.0.2,
   GHC==8.2.2,
-  GHC==8.4.1
+  GHC==8.4.3,
+  GHC==8.6.1
 
 source-repository head
   type:      git
@@ -84,7 +86,7 @@ library
     Data.Vec.Pull
   build-depends:
     adjunctions   >=4.4     && <4.5,
-    base          >=4.7     && <4.12,
+    base          >=4.7     && <4.13,
     base-compat   >=0.9.3   && <0.11,
     deepseq       >=1.3.0.2 && <1.5,
     distributive  >=0.5.3   && <0.7,
