--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,7 +1,7 @@
 cabal-version:       >=1.10
 name:                fin
 version:             0.0.1
-x-revison:           1
+x-revision:          1
 
 synopsis:            Nat and Fin: peano naturals and finite numbers
 category:            Data
