--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,9 +1,8 @@
 cabal-version:      >=1.10
 name:               fin
-version:            0.0.2
-x-revision:         1
+version:            0.0.3
 synopsis:           Nat and Fin: peano naturals and finite numbers
-category:           Data
+category:           Data, Dependent Types, Singletons
 description:
   This package provides two simple types, and some tools to work with them.
   Also on type level as @DataKinds@.
@@ -69,9 +68,13 @@ library
     Data.Fin.Enum
     Data.Nat
     Data.Type.Nat
+    Data.Type.Nat.LE
+    Data.Type.Nat.LE.ReflStep
+    Data.Type.Nat.LT
 
   build-depends:
       base      >=4.7     && <4.13
+    , dec       >=0.0.3   && <0.1
     , deepseq   >=1.3.0.2 && <1.5
     , hashable  >=1.2.7.0 && <1.4
 
