--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,10 +1,9 @@
-cabal-version:       >=1.10
-name:                vec
-version:             0.1
-x-revision:          3
-
-synopsis:            Vec: length-indexed (sized) list
-category:            Data
+cabal-version:      >=1.10
+name:               vec
+version:            0.1
+x-revision:         3
+synopsis:           Vec: length-indexed (sized) list
+category:           Data
 description:
   This package provides length-indexed (sized) lists, also known as vectors.
   .
@@ -19,10 +18,10 @@ description:
   * __naive__: with explicit recursion. It's simple, constraint-less, yet slow.
   .
   * __pull__: using @Fin n -> a@ representation, which fuses well,
-    but makes some programs hard to write. And
+  but makes some programs hard to write. And
   .
   * __inline__: which exploits how GHC dictionary inlining works, unrolling
-    recursion if the size of 'Vec' is known statically.
+  recursion if the size of 'Vec' is known statically.
   .
   As best approach depends on the application, @vec@ doesn't do any magic
   transformation. Benchmark your code.
@@ -37,113 +36,113 @@ description:
   === Similar packages
   .
   * [linear](https://hackage.haskell.org/package/linear) has 'V' type,
-    which uses 'Vector' from @vector@ package as backing store.
-    @Vec@ is a real GADT, but tries to provide as many useful instances (upto @lens@).
+  which uses 'Vector' from @vector@ package as backing store.
+  @Vec@ is a real GADT, but tries to provide as many useful instances (upto @lens@).
   .
   * [vector-sized](https://hackage.haskell.org/package/vector-sized)
-    Great package using @GHC.TypeLits@. Current version (0.6.1.0) uses
-    @finite-typelits@ and @Int@ indexes.
+  Great package using @GHC.TypeLits@. Current version (0.6.1.0) uses
+  @finite-typelits@ and @Int@ indexes.
   .
   * [sized-vector](https://hackage.haskell.org/package/sized-vector) depends
-    on @singletons@ package. @vec@ isn't light on dependencies either,
-    but try to provide wide GHC support.
+  on @singletons@ package. @vec@ isn't light on dependencies either,
+  but try to provide wide GHC support.
   .
   * [fixed-vector](https://hackage.haskell.org/package/fixed-vector)
   .
   * [sized](https://hackage.haskell.org/package/sized) also depends
-    on a @singletons@ package. The @Sized f n a@ type is generalisation of
-    @linear@'s @V@ for any @ListLike@.
+  on a @singletons@ package. The @Sized f n a@ type is generalisation of
+  @linear@'s @V@ for any @ListLike@.
   .
   * [clash-prelude](https://hackage.haskell.org/package/clash-prelude)
-    is a kitchen sink package, which has @CLaSH.Sized.Vector@ module.
-    Also depends on @singletons@.
+  is a kitchen sink package, which has @CLaSH.Sized.Vector@ module.
+  Also depends on @singletons@.
 
-homepage:            https://github.com/phadej/vec
-bug-reports:         https://github.com/phadej/vec/issues
-license:             BSD3
-license-file:        LICENSE
-author:              Oleg Grenrus <oleg.grenrus@iki.fi>
-maintainer:          Oleg.Grenrus <oleg.grenrus@iki.fi>
-copyright:           (c) 2017 Oleg Grenrus
-build-type:          Simple
-extra-source-files:  ChangeLog.md
+homepage:           https://github.com/phadej/vec
+bug-reports:        https://github.com/phadej/vec/issues
+license:            BSD3
+license-file:       LICENSE
+author:             Oleg Grenrus <oleg.grenrus@iki.fi>
+maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
+copyright:          (c) 2017 Oleg Grenrus
+build-type:         Simple
+extra-source-files: ChangeLog.md
 tested-with:
-  GHC==7.8.4,
-  GHC==7.10.3,
-  GHC==8.0.2,
-  GHC==8.2.2,
-  GHC==8.4.4,
-  GHC==8.6.4
+  GHC ==8.6.4 || ==8.4.4 || ==8.2.2 || ==8.0.2 || ==7.10.3 || ==7.8.4
 
 source-repository head
-  type:      git
-  location:  https://github.com/phadej/vec.git
+  type:     git
+  location: https://github.com/phadej/vec.git
 
 library
   exposed-modules:
+    Data.Vec.DataFamily.SpineStrict
     Data.Vec.Lazy
     Data.Vec.Lazy.Inline
     Data.Vec.Pull
+
   build-depends:
-    adjunctions   >=4.4     && <4.5,
-    base          >=4.7     && <4.13,
-    base-compat   >=0.9.3   && <0.11,
-    deepseq       >=1.3.0.2 && <1.5,
-    distributive  >=0.5.3   && <0.7,
-    fin           >=0.0.1   && <0.1,
-    hashable      >=1.2.7.0 && <1.3,
-    lens          >=4.16    && <4.18,
-    semigroupoids >=5.2.2   && <5.4
+      adjunctions    >=4.4     && <4.5
+    , base           >=4.7     && <4.13
+    , base-compat    >=0.9.3   && <0.11
+    , deepseq        >=1.3.0.2 && <1.5
+    , distributive   >=0.5.3   && <0.7
+    , fin            >=0.0.1   && <0.1
+    , hashable       >=1.2.7.0 && <1.3
+    , lens           >=4.16    && <4.18
+    , semigroupoids  >=5.2.2   && <5.4
 
-  if !impl(ghc >= 8.0)
-    build-depends:
-      semigroups  >=0.18.4  && <0.18.6
+  if !impl(ghc >=8.0)
+    build-depends: semigroups >=0.18.4 && <0.18.6
 
-  ghc-options:         -Wall -fprint-explicit-kinds
-  hs-source-dirs:      src
+  ghc-options:      -Wall -fprint-explicit-kinds
+  hs-source-dirs:   src
   other-extensions:
     CPP
     FlexibleContexts
     GADTs
     TypeOperators
-  default-language:    Haskell2010
+
+  default-language: Haskell2010
 
 test-suite inspection
-  type:                exitcode-stdio-1.0
-  main-is:             Inspection.hs
-  ghc-options:         -Wall -fprint-explicit-kinds
-  hs-source-dirs:      test
-  default-language:    Haskell2010
+  type:             exitcode-stdio-1.0
+  main-is:          Main.hs
+  other-modules:
+    Inspection
+    Inspection.DataFamily.SpineStrict
+  ghc-options:      -Wall -fprint-explicit-kinds
+  hs-source-dirs:   test
+  default-language: Haskell2010
   build-depends:
-    base,
-    fin,
-    vec,
-    tagged,
-    inspection-testing >= 0.2.0.1 && <0.5
+      base
+    , fin
+    , inspection-testing  >=0.2.0.1 && <0.5
+    , tagged
+    , vec
 
-  if !impl(ghc >= 8.0)
+  if !impl(ghc >=8.0)
     buildable: False
 
   -- useful for development
   ghc-options:
-    -- -dsuppress-idinfo
-    -- -dsuppress-coercions
-    -- -dsuppress-type-applications
-    -- -dsuppress-module-prefixes
-    -- -dsuppress-type-signatures
-    -- -dsuppress-uniques
+
+-- -dsuppress-idinfo
+-- -dsuppress-coercions
+-- -dsuppress-type-applications
+-- -dsuppress-module-prefixes
+-- -dsuppress-type-signatures
+-- -dsuppress-uniques
 
 benchmark bench
-  type:                exitcode-stdio-1.0
-  main-is:             Bench.hs
-  ghc-options:         -Wall -fprint-explicit-kinds
-  hs-source-dirs:      bench
-  default-language:    Haskell2010
-  other-modules:
-    DotProduct
+  type:             exitcode-stdio-1.0
+  main-is:          Bench.hs
+  ghc-options:      -Wall -fprint-explicit-kinds
+  hs-source-dirs:   bench
+  default-language: Haskell2010
+  other-modules:    DotProduct
   build-depends:
-    base,
-    fin,
-    vec,
-    vector,
-    criterion >= 1.4.0.0 && <1.6
+      base
+    , criterion  >=1.4.0.0 && <1.6
+    , fin
+    , vec
+    , vector
