--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -82,6 +82,9 @@ library
     Data.Vec.Lazy.Inline
     Data.Vec.Pull
 
+  other-modules:
+    Data.Functor.Confusing
+
   build-depends:
       adjunctions    >=4.4     && <4.5
     , base           >=4.7     && <4.13
