--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -1,6 +1,7 @@
 cabal-version:      >=1.10
 name:               fin
 version:            0.0.2
+x-revision:         1
 synopsis:           Nat and Fin: peano naturals and finite numbers
 category:           Data
 description:
@@ -52,7 +53,7 @@ license:            BSD3
 license-file:       LICENSE
 author:             Oleg Grenrus <oleg.grenrus@iki.fi>
 maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
-copyright:          (c) 2017 Oleg Grenrus
+copyright:          (c) 2017-2019 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
@@ -72,13 +73,13 @@ library
   build-depends:
       base      >=4.7     && <4.13
     , deepseq   >=1.3.0.2 && <1.5
-    , hashable  >=1.2.7.0 && <1.3
+    , hashable  >=1.2.7.0 && <1.4
 
   if !impl(ghc >=8.2)
     build-depends: bifunctors >=5.5.3 && <5.6
 
   if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.4 && <0.19
+    build-depends: semigroups >=0.18.4 && <0.20
 
   if !impl(ghc >=7.10)
     build-depends:
