--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,6 +1,7 @@
 cabal-version:      >=1.10
 name:               vec
 version:            0.1.1
+x-revision:         1
 synopsis:           Vec: length-indexed (sized) list
 category:           Data
 description:
@@ -92,13 +93,13 @@ library
     , deepseq        >=1.3.0.2 && <1.5
     , distributive   >=0.5.3   && <0.7
     , fin            >=0.0.2   && <0.1
-    , hashable       >=1.2.7.0 && <1.3
+    , hashable       >=1.2.7.0 && <1.4
     , lens           >=4.16    && <4.18
     , semigroupoids  >=5.2.2   && <5.4
     , transformers   >=0.3.0.0 && <0.6
 
   if !impl(ghc >=8.0)
-    build-depends: semigroups >=0.18.4 && <0.18.6
+    build-depends: semigroups >=0.18.4 && <0.20
 
   ghc-options:      -Wall -fprint-explicit-kinds
   hs-source-dirs:   src
