--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,7 +1,6 @@
 cabal-version:      >=1.10
 name:               vec
-version:            0.1.1.1
-x-revision:         1
+version:            0.2
 synopsis:           Vec: length-indexed (sized) list
 category:           Data, Dependent Types
 description:
@@ -128,8 +127,9 @@ test-suite inspection
   default-language: Haskell2010
   build-depends:
       base
+    , base-compat
     , fin
-    , inspection-testing  >=0.2.0.1 && <0.5
+    , inspection-testing  >=0.4.2.2 && <0.5
     , tagged
     , vec
 
