--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -85,6 +85,8 @@ library
     , deepseq   >=1.3.0.2 && <1.5
     , hashable  >=1.2.7.0 && <1.4
 
+  build-depends: singleton-bool
+
   if !impl(ghc >=8.2)
     build-depends: bifunctors >=5.5.3 && <5.6
 
@@ -122,3 +124,16 @@ test-suite inspection
 
   -- useful for development
   ghc-options:
+
+benchmark nat-bench
+  type:             exitcode-stdio-1.0
+  main-is:          Bench.hs
+  ghc-options:      -Wall -fprint-explicit-kinds
+  hs-source-dirs:   bench
+  default-language: Haskell2010
+  build-depends:
+      base
+    , fin
+    , dec
+    , criterion
+    , singleton-bool
