--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -50,6 +50,7 @@ library
   ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:
     Data.Bin
+    Data.Bin.Pos
     Data.Wid
     Data.Type.Bin
 
