--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -31,6 +31,25 @@ source-repository head
   location: https://github.com/phadej/vec.git
   subdir:   ral
 
+flag adjunctions
+  description: Depend on @adjunctions@ to provide its instances
+  manual:      True
+  default:     True
+
+flag distributive
+  description:
+    Depend on @distributive@ to provide its instances. Turning on, disables @adjunctions@ too.
+
+  manual:      True
+  default:     True
+
+flag semigroupoids
+  description:
+    Depend on @semigroupoids@ to provide its instances, and `traverse1`.
+
+  manual:      True
+  default:     True
+
 library
   default-language: Haskell2010
   hs-source-dirs:   src
@@ -39,22 +58,30 @@ library
     Data.RAL
     Data.RAL.Tree
 
+  -- GHC boot libs
   build-depends:
-      adjunctions    >=4.4     && <4.5
     , base           >=4.7     && <4.14
-    , bin            >=0.1     && <0.2
     , deepseq        >=1.3.0.1 && <1.5
-    , distributive   >=0.5.3   && <0.7
-    , fin            >=0.1.1   && <0.2
-    , hashable       >=1.2.7.0 && <1.4
-    , lens           >=4.16    && <4.19
-    , semigroupoids  >=5.2.2   && <5.4
 
   if !impl(ghc >=8.0)
     build-depends: semigroups >=0.18.4 && <0.20
 
-  if !impl(ghc >=7.10)
-    build-depends: nats >=1.1.2 && <1.2
+  -- siblings
+  build-depends:
+    , bin            >=0.1     && <0.2
+    , fin            >=0.1.1   && <0.2
+
+  -- other dependencies
+  build-depends:    hashable >=1.2.7.0 && <1.4
+
+  if flag(distributive)
+    build-depends: distributive >=0.5.3 && <0.7
+
+    if flag(adjunctions)
+      build-depends: adjunctions ^>=4.4
+
+  if flag(semigroupoids)
+    build-depends: semigroupoids >=5.2.2 && <5.4
 
 -- dump-core
 -- if impl(ghc >= 8.0)
