--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -1,6 +1,6 @@
-cabal-version:      >=1.10
+cabal-version:      2.2
 name:               vec
-version:            0.2.1
+version:            0.3
 synopsis:           Vec: length-indexed (sized) list
 category:           Data, Dependent Types
 description:
@@ -60,7 +60,7 @@ description:
 
 homepage:           https://github.com/phadej/vec
 bug-reports:        https://github.com/phadej/vec/issues
-license:            BSD3
+license:            BSD-3-Clause
 license-file:       LICENSE
 author:             Oleg Grenrus <oleg.grenrus@iki.fi>
 maintainer:         Oleg.Grenrus <oleg.grenrus@iki.fi>
@@ -79,8 +79,31 @@ tested-with:
 source-repository head
   type:     git
   location: https://github.com/phadej/vec.git
+  subdir:   vec
+
+flag adjunctions
+  description: Depend on @adjunctions@ to provide its instances
+  manual:      True
+  default:     True
+
+flag distributive
+  description:
+    Depend on @distributive@ to provide its instances. Turning on, disables @adjunctions@ too.
+
+  manual:      True
+  default:     True
+
+flag semigroupoids
+  description:
+    Depend on @semigroupoids@ to provide its instances, and `traverse1`.
+
+  manual:      True
+  default:     True
 
 library
+  default-language: Haskell2010
+  ghc-options:      -Wall -fprint-explicit-kinds
+  hs-source-dirs:   src
   exposed-modules:
     Data.Vec.DataFamily.SpineStrict
     Data.Vec.DataFamily.SpineStrict.Pigeonhole
@@ -88,30 +111,42 @@ library
     Data.Vec.Lazy.Inline
     Data.Vec.Pull
 
-  other-modules:    Data.Functor.Confusing
+  other-modules:
+    Control.Lens.Yocto
+    Data.Functor.Confusing
+
+  -- GHC boot libs
   build-depends:
-      adjunctions    >=4.4     && <4.5
-    , base           >=4.6     && <4.14
-    , deepseq        >=1.3.0.1 && <1.5
-    , distributive   >=0.5.3   && <0.7
-    , fin            >=0.1.1   && <0.2
-    , hashable       >=1.2.7.0 && <1.4
-    , lens           >=4.16    && <4.19
-    , semigroupoids  >=5.2.2   && <5.4
-    , transformers   >=0.3.0.0 && <0.6
+    , base          >=4.6     && <4.14
+    , deepseq       >=1.3.0.1 && <1.5
+    , transformers  >=0.3.0.0 && <0.6
 
   if !impl(ghc >=8.0)
     build-depends: semigroups >=0.18.4 && <0.20
 
-  ghc-options:      -Wall -fprint-explicit-kinds
-  hs-source-dirs:   src
+  if !impl(ghc >=7.10)
+    build-depends: transformers-compat ^>=0.6.5
+
+  -- siblings
+  build-depends:    fin ^>=0.1.1
+
+  -- other dependencies
+  build-depends:    hashable >=1.2.7.0 && <1.4
+
+  if flag(distributive)
+    build-depends: distributive >=0.5.3 && <0.7
+
+    if flag(adjunctions)
+      build-depends: adjunctions ^>=4.4
+
+  if flag(semigroupoids)
+    build-depends: semigroupoids >=5.2.2 && <5.4
+
   other-extensions:
     CPP
     FlexibleContexts
     GADTs
     TypeOperators
-
-  default-language: Haskell2010
 
 test-suite inspection
   type:             exitcode-stdio-1.0
@@ -125,10 +160,10 @@ test-suite inspection
   hs-source-dirs:   test
   default-language: Haskell2010
   build-depends:
-      base
+    , base
     , base-compat
     , fin
-    , inspection-testing  >=0.4.2.2 && <0.5
+    , inspection-testing  ^>=0.4.2.2
     , tagged
     , vec
 
@@ -143,7 +178,7 @@ benchmark bench
   default-language: Haskell2010
   other-modules:    DotProduct
   build-depends:
-      base
+    , base
     , criterion  >=1.4.0.0 && <1.6
     , fin
     , vec
