--- a/ral-optics/ral-optics.cabal
+++ b/ral-optics/ral-optics.cabal
@@ -1,13 +1,13 @@
 cabal-version:      2.2
-name:               ral-lens
+name:               ral-optics
 version:            0.1
-synopsis:           Length-indexed random access lists: lens utilities.
-category:           Data, Dependent Types, Singletons, Lens
+synopsis:           Length-indexed random access lists: optics utilities.
+category:           Data, Dependent Types, Singletons, Optics
 description:
-  This package provides lenses and instances for type-classes in @lens@
+  This package provides optics and instances for type-classes in @optics@
   package.
   .
-  "Data.RAL.Lens" re-exports all orphan instances defined in this package.
+  "Data.RAL.Optics" re-exports all orphan instances defined in this package.
 
 homepage:           https://github.com/phadej/vec
 bug-reports:        https://github.com/phadej/vec/issues
@@ -19,9 +19,7 @@ copyright:          (c) 2019 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
-  GHC ==7.8.4
-   || ==7.10.3
-   || ==8.0.2
+  GHC ==8.0.2
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
@@ -30,22 +28,22 @@ tested-with:
 source-repository head
   type:     git
   location: https://github.com/phadej/vec.git
-  subdir:   ral-lens
+  subdir:   ral-optics
 
 library
   default-language: Haskell2010
   hs-source-dirs:   src
   ghc-options:      -Wall -fprint-explicit-kinds
   exposed-modules:
-    Data.RAL.Lens
-    Data.RAL.Tree.Lens
+    Data.RAL.Optics
+    Data.RAL.Tree.Optics
 
   build-depends:
-    , base  >=4.7   && <4.14
-    , bin   ^>=0.1
-    , fin   ^>=0.1.1
-    , lens  >=4.16  && <4.19
-    , ral   ^>=0.1
+    , base         >=4.9   && <4.14
+    , bin          ^>=0.1
+    , fin          ^>=0.1.1
+    , optics-core  ^>=0.2
+    , ral          ^>=0.1
 
 -- dump-core
 -- if impl(ghc >= 8.0)
