--- a/vec-optics/vec-optics.cabal
+++ b/vec-optics/vec-optics.cabal
@@ -1,14 +1,14 @@
 cabal-version:      2.2
-name:               vec-lens
+name:               vec-optics
 version:            0.3
-synopsis:           Vec: length-indexed (sized) list: lens support
-category:           Data, Dependent Types, Lens
+synopsis:           Vec: length-indexed (sized) list: optics support
+category:           Data, Dependent Types, Optics
 description:
-  This package provides lenses and instances for type-classes in @lens@
+  This package provides optics and instances for type-classes in @optics@
   package.
   .
-  "Data.Vec.Lens.Instances" provides all the instances.
-  the other modules provide some named lenses too.
+  "Data.Vec.Optics.Instances" provides all the instances.
+  the other modules provide some named optics too.
 
 homepage:           https://github.com/phadej/vec
 bug-reports:        https://github.com/phadej/vec/issues
@@ -20,9 +20,7 @@ copyright:          (c) 2017-2019 Oleg Grenrus
 build-type:         Simple
 extra-source-files: ChangeLog.md
 tested-with:
-  GHC ==7.8.4
-   || ==7.10.3
-   || ==8.0.2
+  GHC ==8.0.2
    || ==8.2.2
    || ==8.4.4
    || ==8.6.5
@@ -31,21 +29,21 @@ tested-with:
 source-repository head
   type:     git
   location: https://github.com/phadej/vec.git
-  subdir:   vec-lens
+  subdir:   vec-optics
 
 library
   default-language: Haskell2010
   ghc-options:      -Wall -fprint-explicit-kinds
   hs-source-dirs:   src
   exposed-modules:
-    Data.Vec.DataFamily.SpineStrict.Lens
-    Data.Vec.Lazy.Inline.Lens
-    Data.Vec.Lazy.Lens
-    Data.Vec.Lens.Instances
-    Data.Vec.Pull.Lens
+    Data.Vec.DataFamily.SpineStrict.Optics
+    Data.Vec.Lazy.Inline.Optics
+    Data.Vec.Lazy.Optics
+    Data.Vec.Optics.Instances
+    Data.Vec.Pull.Optics
 
   -- GHC boot libs
-  build-depends:    base >=4.7 && <4.14
+  build-depends:    base >=4.9 && <4.14
 
   -- siblings
   build-depends:
@@ -53,7 +51,7 @@ library
     , vec  ^>=0.3
 
   -- other dependencies
-  build-depends:    lens ^>=4.18.1
+  build-depends:    optics-core ^>=0.2
   other-extensions:
     CPP
     FlexibleContexts
