--- a/bin/bin.cabal
+++ b/bin/bin.cabal
@@ -54,18 +54,19 @@ library
   exposed-modules:
     Data.Bin
     Data.Bin.Pos
-    Data.Wid
     Data.Type.Bin
+    Data.Wid
 
   build-depends:
-      base      >=4.7     && <4.14
-    , dec       >=0.0.3   && <0.1
-    , deepseq   >=1.3.0.2 && <1.5
-    , fin       >=0.1.1   && <0.2
-    , hashable  >=1.2.7.0 && <1.4
+    , base        >=4.7     && <4.14
+    , dec         ^>=0.0.3
+    , deepseq     >=1.3.0.2 && <1.5
+    , fin         ^>=0.1.1
+    , hashable    >=1.2.7.0 && <1.4
+    , QuickCheck  ^>=2.13.2
 
   if !impl(ghc >=7.10)
-    build-depends: nats >=1.1.2 && <1.2
+    build-depends: nats ^>=1.1.2
 
 -- dump-core
 -- if impl(ghc >= 8.0)
