--- a/fin/fin.cabal
+++ b/fin/fin.cabal
@@ -80,10 +80,11 @@ library
     Data.Type.Nat.LT
 
   build-depends:
-      base      >=4.7     && <4.14
-    , dec       >=0.0.3   && <0.1
-    , deepseq   >=1.3.0.2 && <1.5
-    , hashable  >=1.2.7.0 && <1.4
+      base        >=4.7     && <4.14
+    , dec         >=0.0.3   && <0.1
+    , deepseq     >=1.3.0.2 && <1.5
+    , hashable    >=1.2.7.0 && <1.4
+    , QuickCheck  >=2.13.2  && <2.14
 
   if !impl(ghc >=8.2)
     build-depends: bifunctors >=5.5.3 && <5.6
