--- a/ral/ral.cabal
+++ b/ral/ral.cabal
@@ -60,19 +60,21 @@ library
 
   -- GHC boot libs
   build-depends:
-    , base           >=4.7     && <4.14
-    , deepseq        >=1.3.0.1 && <1.5
+    , base     >=4.7     && <4.14
+    , deepseq  >=1.3.0.1 && <1.5
 
   if !impl(ghc >=8.0)
     build-depends: semigroups >=0.18.4 && <0.20
 
   -- siblings
   build-depends:
-    , bin            >=0.1     && <0.2
-    , fin            >=0.1.1   && <0.2
+    , bin  ^>=0.1
+    , fin  ^>=0.1.1
 
   -- other dependencies
-  build-depends:    hashable >=1.2.7.0 && <1.4
+  build-depends:
+    , hashable    >=1.2.7.0 && <1.4
+    , QuickCheck  ^>=2.13.2
 
   if flag(distributive)
     build-depends: distributive >=0.5.3 && <0.7
