--- a/vec/vec.cabal
+++ b/vec/vec.cabal
@@ -131,7 +131,9 @@ library
   build-depends:    fin ^>=0.1.1
 
   -- other dependencies
-  build-depends:    hashable >=1.2.7.0 && <1.4
+  build-depends:
+    , hashable    >=1.2.7.0 && <1.4
+    , QuickCheck  ^>=2.13.2
 
   if flag(distributive)
     build-depends: distributive >=0.5.3 && <0.7
